# CppReview

./: .gitignore  CMakeLists.txt  compile_flags.txt  main.cpp
clib/: CMakeLists.txt  CSI.c  CSI.h  utilities.c  utilities.h
models/: CMakeLists.txt  company.cpp  company.hpp  model.cpp  model.hpp  student.cpp  student.hpp
services/: CMakeLists.txt  db_singleton.cpp  db_singleton.hpp  db_table.cpp  db_table.hpp
test/: CMakeLists.txt  test_custom.cpp  test_file.cpp  test_model_add.cpp  test_model_read.cpp  test_template_factory.cpp
utilities/: reflect_utility.hpp
